[feat] #220 - 실제 이름같이 처리하여 MockData User명 넣고 진행! 그에 따른 로직 변경 진행
- imgUrl도 설정한 mockImgUrl로 설정